# earthquake_data_layer

./: .coverage  .env  .env_  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  change_log.md  collect.py  collect_dataset.py  pyproject.toml  update_dataset.py
.github/workflows/: cd-deploy.yml  ci-tests.yml
earthquake_data_layer/: __init__.py  data.py  definitions.py  downloader.py  entrypoint.py  exceptions.py  fetcher.py  helpers.py  meta.json  meta_.json  metadata.py  metadata_manager.py  processing.py  proxy_generator.py  settings.py  storage.py  validating.py
earthquake_data_layer/routes/: collect.py  update.py
integration_tests/: .env_  docker-compose.yaml  run.sh
tests/: conftest.py  test_data.py  utils.py
tests/collect_dataset/: test_fetch_months_data.py  test_verify_initial_dataset.py
tests/data/: conftest.py  test_get_remaining_requests.py  test_get_update_metadata.py  test_latest_update.py
tests/downloader/: test_fetch_data.py  test_generate_requests_params.py  test_get_api_response.py  test_get_base_query_params.py  test_get_num_results.py  test_key_api2name.py
tests/entrypoint/: conftest.py  test_collect.py  test_update.py
tests/fetcher/: conftest.py  test_fetch_data.py  test_generate_query_params.py  test_process.py  test_query_api.py  test_upload_data.py
tests/helpers/: __init__.py  test_add_rows_to_parquet.py  test_dataset_months.py  test_fetch_months_data.py  test_get_month_start_end_dates.py  test_is_valid_date.py  test_key_api2name.py  test_updated_and_save_metadata.py
tests/metadata/: conftest.py  (+4 more)
(+9 files in other folders)
