[tool.poetry]
name = "earthquake-data-layer"
version = "0.5.1"
description = ""
authors = ["Yonatan Eisenberg <yonatan.eis@gmail.com>"]
readme = "README.md"
packages = [{include = "earthquake_data_layer"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
boto3 = "^1.34.11"
pandas = "^2.1.4"
pyarrow = "^14.0.2"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pylint = "^3.0.3"
black = "22.6.0"
isort = "5.12.0"
pre-commit = "^3.6.0"
moto = {extras = ["s3"], version = "^4.2.12"}
httpx = "^0.26.0"
coverage = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
